--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "node ./server/bin/start"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.4",
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
@@ -18,6 +19,8 @@
     "express-validator": "^6.10.0",
     "http-errors": "^1.7.3",
     "mongoose": "^5.11.15",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "pino": "^6.11.2",
     "pino-pretty": "^4.7.1"
   },
