--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-validator": "^6.10.0",
     "http-errors": "^1.7.3",
     "mongoose": "^5.11.15",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pino": "^6.11.2",
